# rag_discuss

./: README.md  app.py  pyproject.toml
src/: ingestion.py  llm_discuss.py  orchestrator.py  vector_store.py
src/css/: ui_custom_css.py
src/prompts/: prompts_inputs.yaml
